# miui-auto-tasks

./: .bandit  .env  .gitignore  .pylintrc  Dockerfile  Dockerfile-cn  LICENSE  README.md  config.env  config.template.yaml  config.yaml  crontab  docker_start.sh  firstrun.sh  main.py  miuitask.py  passwd2md5.py  pyproject.toml  requirements.txt  run.sh  system_info.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker-image.yml  main.yml  test.yml  up_requirement.yml
utils/: __version__.py  captcha.py  config.py  data_model.py  logger.py  request.py  system_info.py  token.py  utils.py
utils/api/: login.py  sign.py
